--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation("com.google.firebase:firebase-auth-ktx")
 }
