--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   auto_route: ^7.8.3
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
+  firebase_messaging: ^14.6.7
+  flutter_local_notifications: ^15.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
