--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_messaging: ^14.6.7
   flutter_local_notifications: ^15.1.1
+  permission_handler: ^11.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
