--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   dio: ^5.3.2
   dartz: ^0.10.1
@@ -26,6 +28,7 @@ dependencies:
   pubnub: ^4.2.4
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.2
+  localization: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -38,15 +41,16 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - images/
-    - icons/
+    - assets/images/
+    - assets/icons/
+    - assets/lang/
   fonts:
     - family: NotoSansLao
       fonts:
-        - asset: fonts/NotoSansLao-Medium.ttf
-        - asset: fonts/NotoSansLao-Light.ttf
+        - asset: assets/fonts/NotoSansLao-Medium.ttf
+        - asset: assets/fonts/NotoSansLao-Light.ttf
     - family: roboto
       fonts:
-        - asset: fonts/roboto.bold.ttf
-        - asset: fonts/roboto.medium.ttf
-        - asset: fonts/roboto.medium-italic.ttf
+        - asset: assets/fonts/roboto.bold.ttf
+        - asset: assets/fonts/roboto.medium.ttf
+        - asset: assets/fonts/roboto.medium-italic.ttf
