--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.2
   localization: ^2.1.0
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.0
+  url_launcher: ^6.1.14
 dev_dependencies:
   flutter_test:
     sdk: flutter
