--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.3.0
   url_launcher: ^6.1.14
+  flutter_html: ^3.0.0-beta.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
